feat: 영수증 추출을 내구성 비동기 처리로 전환
동시 업로드의 AI 중복 호출을 재현하고 MySQL 작업 큐와 Lease 기반 Worker로 접수와 추출을 분리했다.

추출 실패는 10초 간격으로 최대 3회 재시도하며 최종 실패 시 수동 입력으로 전환하고 감사 로그와 테스트 및 문서를 보강했다.